--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-# Created by https://www.toptal.com/developers/gitignore/api/python,django,visualstudiocode,git,pycharm,jupyternotebooks
-# Edit at https://www.toptal.com/developers/gitignore?templates=python,django,visualstudiocode,git,pycharm,jupyternotebooks
+# Created by https://www.toptal.com/developers/gitignore/api/git,venv,python,django,pycharm,virtualenv,jupyternotebooks,visualstudiocode,dotenv
+# Edit at https://www.toptal.com/developers/gitignore?templates=git,venv,python,django,pycharm,virtualenv,jupyternotebooks,visualstudiocode,dotenv
 
 ### Django ###
 *.log
@@ -170,6 +170,8 @@ cython_debug/
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
+
+### dotenv ###
 
 ### Git ###
 # Created by git for backups. To disable backups in Git:
@@ -392,6 +394,22 @@ fabric.properties
 #  and can be added to the global gitignore or merged into this file.  For a more nuclear
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 
+### venv ###
+# Virtualenv
+# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
+[Bb]in
+[Ii]nclude
+[Ll]ib
+[Ll]ib64
+[Ll]ocal
+[Ss]cripts
+pyvenv.cfg
+pip-selfcheck.json
+
+### VirtualEnv ###
+# Virtualenv
+# http://iamzed.com/2009/05/07/a-primer-on-virtualenv/
+
 ### VisualStudioCode ###
 .vscode/*
 !.vscode/settings.json
@@ -417,4 +435,4 @@ fabric.properties
 # Ignore code-workspaces
 *.code-workspace
 
-# End of https://www.toptal.com/developers/gitignore/api/python,django,visualstudiocode,git,pycharm,jupyternotebooksW
+# End of https://www.toptal.com/developers/gitignore/api/git,venv,python,django,pycharm,virtualenv,jupyternotebooks,visualstudiocode,dotenv
